<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="transaction_tab_income">Income</string>
    <string name="transaction_tab_expense">Expense</string>
    <string name="transaction_category_subtitle">Category</string>

    <string name="transaction_money_account_subtitle">Money account</string>

    <string name="transaction_date_subtitle">Date</string>
    <string name="transaction_date_today">Today</string>
    <string name="transaction_date_yesterday">Yesterday</string>

    <string name="transaction_delete_button">Delete transaction</string>

    <string name="transaction_unsaved_transaction_dialog_message">Save transaction?</string>
    <string name="transaction_unsaved_changes_dialog_message">Save changes?</string>

</resources>