<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/closeIcon"
                style="@style/ToolbarIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_close" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/saveIcon"
                style="@style/ToolbarIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_check"
                app:tint="@color/color_selector_button" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:splitMotionEvents="false">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/transactionTypeTabLayout"
                style="@style/TabLayout"
                android:layout_width="226dp"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_tab_income" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_tab_expense" />

            </com.google.android.material.tabs.TabLayout>

            <serg.chuprin.finances.core.api.presentation.view.widget.AmountEditText
                android:id="@+id/amountEditText"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:gravity="center_horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="0"
                android:textSize="30sp"
                tools:ignore="HardcodedText" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/moneyAccountLayout"
                style="@style/ClickableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingTop="12dp"
                android:paddingEnd="8dp"
                android:paddingBottom="12dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/transaction_money_account_subtitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/chosenMoneyAccountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    tools:text="Cash" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/categoryLayout"
                style="@style/ClickableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingTop="12dp"
                android:paddingEnd="8dp"
                android:paddingBottom="12dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/transaction_category_subtitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/chosenCategoryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    tools:text="No category" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/dateLayout"
                style="@style/ClickableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingTop="12dp"
                android:paddingEnd="8dp"
                android:paddingBottom="12dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/transaction_date_subtitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/chosenDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    tools:text="Today" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteTransactionButton"
                style="@style/DangerousButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/transaction_delete_button"
                android:visibility="gone"
                tools:visibility="visible" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>